{
  "version": 4,
  "terraform_version": "1.12.1",
  "serial": 14,
  "lineage": "c3fa2634-7ac9-8f31-b473-7caabbb7b855",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/08062aa4-07e5-4135-95e4-b77d46c5ee8b/resourceGroups/tf-lab-rg/providers/Microsoft.Network/networkInterfaces/tf-nic",
            "internal_domain_name_suffix": "14rokpng0ueuhooomiz01lk2af.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/08062aa4-07e5-4135-95e4-b77d46c5ee8b/resourceGroups/tf-lab-rg/providers/Microsoft.Network/publicIPAddresses/tf-public-ip",
                "subnet_id": "/subscriptions/08062aa4-07e5-4135-95e4-b77d46c5ee8b/resourceGroups/tf-lab-rg/providers/Microsoft.Network/virtualNetworks/tf-vnet/subnets/tf-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastus",
            "mac_address": "00-0D-3A-9E-5A-66",
            "name": "tf-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "tf-lab-rg",
            "virtual_machine_id": "/subscriptions/08062aa4-07e5-4135-95e4-b77d46c5ee8b/resourceGroups/tf-lab-rg/providers/Microsoft.Compute/virtualMachines/tf-linux-vm"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.public_ip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/08062aa4-07e5-4135-95e4-b77d46c5ee8b/resourceGroups/tf-lab-rg/providers/Microsoft.Network/networkSecurityGroups/tf-nsg",
            "location": "eastus",
            "name": "tf-nsg",
            "resource_group_name": "tf-lab-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/08062aa4-07e5-4135-95e4-b77d46c5ee8b/resourceGroups/tf-lab-rg/providers/Microsoft.Network/networkSecurityGroups/tf-nsg/securityRules/Allow-SSH",
            "name": "Allow-SSH",
            "network_security_group_name": "tf-nsg",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "tf-lab-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/08062aa4-07e5-4135-95e4-b77d46c5ee8b/resourceGroups/tf-lab-rg/providers/Microsoft.Network/publicIPAddresses/tf-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.185.68.25",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "tf-public-ip",
            "resource_group_name": "tf-lab-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/08062aa4-07e5-4135-95e4-b77d46c5ee8b/resourceGroups/tf-lab-rg/providers/Microsoft.Network/virtualNetworks/tf-vnet/subnets/tf-subnet",
            "name": "tf-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "tf-lab-rg",
            "virtual_network_name": "tf-vnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/08062aa4-07e5-4135-95e4-b77d46c5ee8b/resourceGroups/tf-lab-rg/providers/Microsoft.Network/virtualNetworks/tf-vnet/subnets/tf-subnet",
            "network_security_group_id": "/subscriptions/08062aa4-07e5-4135-95e4-b77d46c5ee8b/resourceGroups/tf-lab-rg/providers/Microsoft.Network/networkSecurityGroups/tf-nsg",
            "subnet_id": "/subscriptions/08062aa4-07e5-4135-95e4-b77d46c5ee8b/resourceGroups/tf-lab-rg/providers/Microsoft.Network/virtualNetworks/tf-vnet/subnets/tf-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "3de5a2df-d5a6-4309-b9ce-6233adad5c05",
            "id": "/subscriptions/08062aa4-07e5-4135-95e4-b77d46c5ee8b/resourceGroups/tf-lab-rg/providers/Microsoft.Network/virtualNetworks/tf-vnet",
            "location": "eastus",
            "name": "tf-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "tf-lab-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/08062aa4-07e5-4135-95e4-b77d46c5ee8b/resourceGroups/tf-lab-rg/providers/Microsoft.Network/virtualNetworks/tf-vnet/subnets/tf-subnet",
                "name": "tf-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}